fix(Table): adjust stories visibility styling

--- a/packages/react-components/src/components/Table/Table.module.scss
+++ b/packages/react-components/src/components/Table/Table.module.scss
@@ -70,6 +70,7 @@ $base-class: 'table';
     border-top-right-radius: var(--radius-3);
     background-color: var(--surface-invert-primary);
     padding: 0;
+    width: 0;
     height: 0;
     overflow: hidden;
     font-weight: 500;
@@ -80,6 +81,7 @@ $base-class: 'table';
       margin: 0;
       padding: var(--spacing-2) var(--spacing-2) var(--spacing-2)
         var(--spacing-4);
+      width: 100%;
       height: 48px;
       overflow: visible;
     }
